force-app/main/default/objects/Custom_Permissions_Case_Type_Mapping__mdt/Custom_Permissions_Case_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Custom Permissions Case Type Mapping</label>
    <pluralLabel>Custom Permissions Case Type Mappings</pluralLabel>
</CustomObject>