force-app/main/default/objects/Custom_Permissions_Case_Type_Mapping__mdt/fields/Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Types__c</fullName>
    <label>Case Types - Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>