force-app/main/default/objects/Custom_Permissions_Case_Type_Mapping__mdt/fields/Custom_Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission_Name__c</fullName>
    <label>Custom Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>