force-app/main/default/objects/Custom_Permissions_Case_Type_Mapping__mdt/listViews/All_mappings.listView-meta.xml
<ListView>
    <fullName>All_mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Custom_Permission_Name__c</columns>
    <columns>Case_Types__c</columns>
    <columns>Case_Types_Contraventions__c</columns>
    <columns>Case_Types_Preventions__c</columns>
    <columns>Case_Types_Revocations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All mappings</label>
</ListView>